cart-api open api spec changes
