# src/backend/services/cart-api/internal/docs/swagger.json
@@ -16,9 +16,9 @@
         "version": "1.0"
     },
     "paths": {
-        "/items": {
+        "/cart": {
             "post": {
-                "description": "add by json new CustomerBasket",
+                "description": "add by json new Cart",
                 "consumes": [
                     "application/json"
                 ],
@@ -26,17 +26,17 @@
                     "application/json"
                 ],
                 "tags": [
-                    "CustomerBasket"
+                    "Cart"
                 ],
-                "summary": "Add a CustomerBasket",
+                "summary": "Creates new cart",
                 "parameters": [
                     {
-                        "description": "Add CustomerBasket",
-                        "name": "CustomerBasket",
+                        "description": "Creates new cart",
+                        "name": "cart",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.Cart"
+                            "$ref": "#/definitions/models.CreateCartReq"
                         }
                     }
                 ],
@@ -68,9 +68,9 @@
                 }
             }
         },
-        "/items/{id}": {
+        "/cart/{id}": {
             "get": {
-                "description": "Get CustomerBasket by ID",
+                "description": "Get Cart by ID",
                 "consumes": [
                     "application/json"
                 ],
@@ -78,13 +78,13 @@
                     "application/json"
                 ],
                 "tags": [
-                    "CustomerBasket"
+                    "Cart"
                 ],
-                "summary": "Gets a CustomerBasket",
+                "summary": "Gets a Cart",
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "CustomerBasket ID",
+                        "description": "Cart ID",
                         "name": "id",
                         "in": "path",
                         "required": true
@@ -111,8 +111,8 @@
                     }
                 }
             },
-            "delete": {
-                "description": "Deletes CustomerBasket by ID",
+            "put": {
+                "description": "update by json cart",
                 "consumes": [
                     "application/json"
                 ],
@@ -120,13 +120,70 @@
                     "application/json"
                 ],
                 "tags": [
-                    "CustomerBasket"
+                    "Cart"
                 ],
-                "summary": "Deletes a CustomerBasket",
+                "summary": "Update cart",
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "CustomerBasket ID",
+                        "description": "Cart ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Updates cart",
+                        "name": "update_cart",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.CreateCartReq"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.Cart"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/models.HTTPError"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/models.HTTPError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/models.HTTPError"
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "description": "Deletes Cart by ID",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Cart"
+                ],
+                "summary": "Deletes a Cart",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Cart ID",
                         "name": "id",
                         "in": "path",
                         "required": true
@@ -135,6 +192,65 @@
                 "responses": {
                     "200": {
                         "description": ""
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/models.HTTPError"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/models.HTTPError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/models.HTTPError"
+                        }
+                    }
+                }
+            }
+        },
+        "/cart/{id}/item": {
+            "put": {
+                "description": "update by json new line item",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Cart"
+                ],
+                "summary": "Update or add a line item",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Cart ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Update line item",
+                        "name": "lineItem",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.LineItem"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.Cart"
+                        }
                     },
                     "400": {
                         "description": "Bad Request",
@@ -191,6 +307,20 @@
                 },
                 "total": {
                     "type": "number"
+                },
+                "user_id": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.CreateCartReq": {
+            "type": "object",
+            "properties": {
+                "items": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.LineItem"
+                    }
                 },
                 "user_id": {
                     "type": "string"
