# src/backend/services/cart-api/internal/handlers/cart_handler.go
@@ -14,7 +14,7 @@ type GetCreateDeleter interface {
 	Get(ctx context.Context, cartID string) (*models.Cart, error)
 	Update(ctx context.Context, cart *models.Cart) error
 	Delete(ctx context.Context, id string) error
-	UpdateItem(ctx context.Context, cartID string, item models.LineItem) error
+	SetItem(ctx context.Context, cartID string, item models.LineItem) error
 }
 
 // CartHandler is router initializer for http
@@ -22,7 +22,7 @@ type CartHandler struct {
 	repository GetCreateDeleter
 }
 
-// NewCartHandler creates new instance of BasketController with BasketRepository
+// NewCartHandler creates new instance of CartHandler with CartRepository
 func NewCartHandler(r GetCreateDeleter) *CartHandler {
 	return &CartHandler{repository: r}
 }
@@ -43,29 +43,30 @@ func ErrorHandler(f func(c *gin.Context) error) gin.HandlerFunc {
 
 // Create go doc
 //
-//	@Summary		Add a CustomerBasket
-//	@Description	add by json new CustomerBasket
-//	@Tags			CustomerBasket
+//	@Summary		Creates new cart
+//	@Description	add by json new Cart
+//	@Tags			Cart
 //	@Accept			json
 //	@Produce		json
-//	@Param			CustomerBasket	body		models.Cart	true	"Add CustomerBasket"
+//	@Param			cart			body		models.CreateCartReq	true	"Creates new cart"
 //	@Success		200				{object}	models.Cart
 //	@Failure		400				{object}	models.HTTPError
 //	@Failure		404				{object}	models.HTTPError
 //	@Failure		500 			{object}	models.HTTPError
-//	@Router			/items [post]
+//	@Router			/cart 			[post]
 func (h *CartHandler) Create(c *gin.Context) error {
-	var entity models.Cart
-	if err := c.BindJSON(&entity); err != nil {
+	var req models.CreateCartReq
+	if err := c.BindJSON(&req); err != nil {
 		return models.NewHTTPError(http.StatusBadRequest, err)
 	}
 
-	err := h.repository.Update(c.Request.Context(), &entity)
+	cart := models.MapCreateCartReqToCart(req)
+	err := h.repository.Update(c.Request.Context(), cart)
 	if err != nil {
 		return models.NewHTTPError(http.StatusBadRequest, err)
 	}
 
-	result, err := h.repository.Get(c.Request.Context(), entity.ID.String())
+	result, err := h.repository.Get(c.Request.Context(), cart.ID.String())
 	if err != nil {
 		return models.NewHTTPError(http.StatusBadRequest, err)
 	}
@@ -74,27 +75,38 @@ func (h *CartHandler) Create(c *gin.Context) error {
 	return nil
 }
 
-// Update line item doc
+// Update cart doc
 //
-//	@Summary		Update a line item
-//	@Description	update by json new line item
-//	@Tags			CustomerBasket
+//	@Summary		Update cart
+//	@Description	update by json cart
+//	@Tags			Cart
 //	@Accept			json
 //	@Produce		json
-//	@Param			id	path		string		true	"Cart ID"
-//	@Param			lineItem		body		models.LineItem	true	"Update line item"
-//	@Success		200				{object}	models.Cart
-//	@Failure		400				{object}	models.HTTPError
-//	@Failure		404				{object}	models.HTTPError
-//	@Failure		500 			{object}	models.HTTPError
-
-func (h *CartHandler) UpdateItem(c *gin.Context) error {
+//	@Param			id	path			string		true	"Cart ID"
+//	@Param			update_cart			body		models.CreateCartReq	true "Updates cart"
+//	@Success		200					{object}	models.Cart
+//	@Failure		400					{object}	models.HTTPError
+//	@Failure		404					{object}	models.HTTPError
+//	@Failure		500 				{object}	models.HTTPError
+//	@Router			/cart/{id}			[put]
+func (h *CartHandler) Update(c *gin.Context) error {
 	cartID := c.Param("id")
-	var entity models.LineItem
+	var entity models.CreateCartReq
 	if err := c.BindJSON(&entity); err != nil {
 		return models.NewHTTPError(http.StatusBadRequest, err)
 	}
-	if err := h.repository.UpdateItem(c.Request.Context(), cartID, entity); err != nil {
+
+	_, err := h.repository.Get(c.Request.Context(), cartID)
+	if err != nil {
+		if errors.Is(err, repositories.ErrCartNotFound) {
+			return models.NewHTTPError(http.StatusNotFound, errors.Wrap(err, "cartID: "+cartID))
+		}
+		return models.NewHTTPError(http.StatusInternalServerError, err)
+	}
+
+	cart := models.MapCreateCartReqToCart(entity)
+
+	if err := h.repository.Update(c.Request.Context(), cart); err != nil {
 		return models.NewHTTPError(http.StatusInternalServerError, err)
 	}
 	return nil
@@ -102,23 +114,23 @@ func (h *CartHandler) UpdateItem(c *gin.Context) error {
 
 // Get go doc
 //
-//	@Summary		Gets a CustomerBasket
-//	@Description	Get CustomerBasket by ID
-//	@Tags			CustomerBasket
+//	@Summary		Gets a Cart
+//	@Description	Get Cart by ID
+//	@Tags			Cart
 //	@Accept			json
 //	@Produce		json
-//	@Param			id	path		string	true	"CustomerBasket ID"
+//	@Param			id	path		string	true	"Cart ID"
 //	@Success		200	{object}	models.Cart
 //	@Failure		400	{object}	models.HTTPError
 //	@Failure		404 {object}	models.HTTPError
-//	@Router			/items/{id} [get]
+//	@Router			/cart/{id} 		[get]
 func (h *CartHandler) Get(c *gin.Context) error {
 	id := c.Param("id")
 
 	result, err := h.repository.Get(c.Request.Context(), id)
 	if err != nil {
 		if errors.Is(err, repositories.ErrCartNotFound) {
-			return models.NewHTTPError(http.StatusNotFound, errors.Wrap(err, "itemID: "+id))
+			return models.NewHTTPError(http.StatusNotFound, errors.Wrap(err, "cartID: "+id))
 		}
 		return models.NewHTTPError(http.StatusInternalServerError, err)
 	}
@@ -128,17 +140,17 @@ func (h *CartHandler) Get(c *gin.Context) error {
 
 // Delete go doc
 //
-//	@Summary		Deletes a CustomerBasket
-//	@Description	Deletes CustomerBasket by ID
-//	@Tags			CustomerBasket
+//	@Summary		Deletes a Cart
+//	@Description	Deletes Cart by ID
+//	@Tags			Cart
 //	@Accept			json
 //	@Produce		json
-//	@Param			id	path	string	true	"CustomerBasket ID"
+//	@Param			id	path	string	true	"Cart ID"
 //	@Success		200	""
 //	@Failure		400	{object}	models.HTTPError
 //	@Failure		404	{object}	models.HTTPError
 //	@Failure		500	{object}	models.HTTPError
-//	@Router			/items/{id} [delete]
+//	@Router			/cart/{id} 		[delete]
 func (h *CartHandler) Delete(c *gin.Context) error {
 	id := c.Param("id")
 
@@ -147,5 +159,31 @@ func (h *CartHandler) Delete(c *gin.Context) error {
 		return models.NewHTTPError(http.StatusBadRequest, err)
 	}
 	c.Status(http.StatusOK)
+	return nil
+}
+
+// Update line item doc
+//
+//	@Summary		Update or add a line item
+//	@Description	update by json new line item
+//	@Tags			Cart
+//	@Accept			json
+//	@Produce		json
+//	@Param			id	path			string		true	"Cart ID"
+//	@Param			lineItem			body		models.LineItem	true	"Update line item"
+//	@Success		200					{object}	models.Cart
+//	@Failure		400					{object}	models.HTTPError
+//	@Failure		404					{object}	models.HTTPError
+//	@Failure		500 				{object}	models.HTTPError
+//	@Router			/cart/{id}/item		[put]
+func (h *CartHandler) UpdateItem(c *gin.Context) error {
+	cartID := c.Param("id")
+	var entity models.LineItem
+	if err := c.BindJSON(&entity); err != nil {
+		return models.NewHTTPError(http.StatusBadRequest, err)
+	}
+	if err := h.repository.SetItem(c.Request.Context(), cartID, entity); err != nil {
+		return models.NewHTTPError(http.StatusInternalServerError, err)
+	}
 	return nil
 }
